--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 section.board {
@@ -25,4 +26,6 @@ div {
 
 .resetBtn {
   max-width: 50px;
+  margin: 25px;
+  background-color: darkgray;
 }
