--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,55 @@
 body {
-    background-color: gray;
-	/* Use a system font, if none are available use an available sans-sarif   font */
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  background: #0F2027;
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 0;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #fbfbfb;
+  font-weight: lighter;
 }
 
 section.board {
   display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
+  grid-template-rows: repeat(3, 20vmin);
+  grid-template-columns: repeat(3, 20vmin);
   grid-gap: 0vmin;
 }
 
 div {
-  border: 3px solid black;
-  font-size: 8vmin;
+  border: 1px solid #fbfbfb;
+  font-size: 15vmin;
   text-align: center;
   vertical-align: middle;
 }
 
-.resetBtn {
-  max-width: 50px;
-  margin: 25px;
-  background-color: darkgray;
+h1,
+h2 {
+  color: #fbfbfb;
+  font-weight: lighter;
+}
+
+h1 {
+  font-size: 60px;
+  margin: 20px;
+}
+
+h2 {
+  font-size: 40px;
+  margin: 0 0 20px;
+}
+
+button {
+  border: rgb(184, 14, 11);
+	font-weight: lighter;
+  font-size: 25px;
+  background-color: #cac9c9;
+  border-radius: 5%;
+  margin: 50px;
+  height: 45px;
+  width: 100px;
+  color: #1a1c1f;
 }
